First implementation and moving structure from bundle to component

--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,34 @@
 {
-  "type": "project",
-  "name": "__PACKAGE_NAME__",
-  "description": "__BUNDLE_DESCRIPTION__",
-  "license": "proprietary",
-  "minimum-stability": "stable",
+  "type": "library",
+  "name": "atournayre/null",
+  "description": "Provides a null object",
+  "keywords": ["null", "object"],
+  "authors": [
+    {
+      "name": "Aurélien Tournayre",
+      "email": "aurelien.tournayre@gmail.com"
+    }
+  ],
+  "license": "MIT",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": ">=__VERSION_PHP__",
-    "symfony/console": "__VERSION_SYMFONY__.*"
+    "php": ">=8.1",
+    "archtechx/enums": "^v1.0.1"
   },
   "require-dev": {
-    "phpstan/phpstan": "^__VERSION_PHPSTAN__",
-    "phpunit/phpunit": "^__VERSION_PHPUNIT__",
-    "friendsofphp/php-cs-fixer": "^__VERSION_PHPCSFIXER__",
-    "symfony/browser-kit": "^__VERSION_SYMFONY__",
-    "symfony/framework-bundle": "^__VERSION_SYMFONY__",
-    "symfony/yaml": "^__VERSION_SYMFONY__"
+    "phpstan/phpstan": "^1",
+    "phpunit/phpunit": "^10.0",
+    "friendsofphp/php-cs-fixer": "^3.1"
   },
   "autoload": {
     "psr-4": {
-      "__NAMESPACE_COMPOSER__\\": "src/"
+      "Atournayre\\Component\\Null\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "__NAMESPACE_COMPOSER__\\Tests\\": "tests/"
+      "Atournayre\\Component\\Null\\Tests\\": "tests/"
     }
   }
 }
