--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": ">=8.1",
-    "archtechx/enums": "^v1.0.1"
+    "php": ">=8.1"
   },
   "require-dev": {
     "phpstan/phpstan": "^1",
